# Themis

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  Makefile  README.md  deny.toml  install.sh
.config/: nextest.toml
.githooks/: check-copyright.sh  commit-msg  pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: 404.md  CLI_DESIGN.md  CONFIGURATION_DESIGN.md  INTEGRATION_DESIGN.md  PROFILE_DESIGN.md  STATE_DESIGN.md  getting-started.md  index.md
docs/builtins/: gtk.md  kitty.md  polybar.md  rofi.md  waybar.md
docs/extras/: hyprpolkit.md  neovim.md
docs/guides/: integrations.md  profiles.md
docs/internal/: CLI_DESIGN.md  CONFIGURATION_DESIGN.md  INTEGRATION_DESIGN.md  PROFILE_DESIGN.md  STATE_DESIGN.md
docs/reference/: cli.md  config.md
docs/reference/integrations/: gtk.md  hyprpolkit.md  kitty.md  neovim.md  polybar.md  rofi.md  waybar.md
packaging/aur/themis/: PKGBUILD
packaging/aur/themis-bin/: PKGBUILD
packaging/homebrew/: README.md  themis.rb
src/: lib.rs  main.rs
src/adapters/: command.rs  dryrun.rs  filesystem.rs  mock.rs  mod.rs  template.rs
src/commands/: doctor.rs  init.rs  mod.rs  status.rs  verify.rs
src/core/: config.rs  integration.rs  mod.rs  orchestrator.rs  paths.rs  profile.rs  state.rs  tests.rs  traits.rs
tests/: integration_test.rs
tests/common/: mod.rs
website/: astro.config.mjs  package-lock.json  package.json
