[package]
name = "themis"
version = "0.1.0"
edition = "2024"
description = "A theme orchestrator CLI for Linux"
repository = "https://github.com/TwoWells/Themis"
homepage = "https://github.com/TwoWells/Themis"
license = "AGPL-3.0-or-later"
keywords = ["theme", "linux", "cli", "dotfiles"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tera = "1.19"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.24.0"
