[package]
name = "themis-cli"
version = "0.1.0"
edition = "2024"
description = "A theme orchestrator CLI for Linux"
repository = "https://github.com/TwoWells/Themis"
homepage = "https://github.com/TwoWells/Themis"
license = "AGPL-3.0-or-later"
keywords = ["theme", "linux", "cli", "dotfiles"]
categories = ["command-line-utilities"]

# The crates.io package is `themis-cli` (the name `themis` is taken), but the
# installed binary and the library crate keep the `themis` name.
[lib]
name = "themis"
path = "src/lib.rs"

[[bin]]
name = "themis"
path = "src/main.rs"

# `cargo binstall themis-cli` fetches the prebuilt Release artifact instead of
# compiling. The release workflow publishes `themis-<target>.tar.gz` with the
# `themis` binary at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/themis-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tera = "1.19"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.24.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Hard denials — no agent should produce these
unwrap_used = "deny"
expect_used = "deny"            # test modules opt out via #[allow(..., reason = "...")]
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "allow"          # CLI prints results to stdout (status/verify/doctor)
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"
allow_attributes_without_reason = "deny"   # every #[allow] must carry reason = "..."

multiple_crate_versions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
